# db-mover

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  docker-compose.yaml
.github/workflows/: ci.yml
benches/: e2e.rs  sqlite_to_sqlite.rs
gen-bench-data/: Cargo.toml
gen-bench-data/src/: main.rs
src/: args.rs  channel.rs  error.rs  lib.rs  main.rs  postgres.rs  progress.rs  reader.rs  retry.rs  row.rs  sqlite.rs  table_migrator.rs  uri.rs  writer.rs
src/databases/: mod.rs  sqlite.rs  table.rs  traits.rs  writer.rs
src/databases/mysql/: mod.rs  value.rs
src/databases/postgres/: mod.rs  value.rs
src/databases/sqlite/: mod.rs  value.rs
src/test_utils/: postgres.rs  row.rs  sqlite.rs  testable_database.rs
tests/: e2e.rs  mysql.rs  postgres.rs  postgres_to_postgres.rs  postgres_to_sqlite.rs  sqlite.rs  sqlite_to_postgres.rs  sqlite_to_sqlite.rs  types.rs
tests/common/: mod.rs  mysql.rs  postgres.rs  row.rs  sqlite.rs  testable_database.rs  testcases.rs
