[package]
name = "db-mover"
description = "Tool to move data between databases"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
rusqlite = { version = "0.32.1", features = ["column_decltype", "bundled", "chrono"] }
postgres = { version = "0.19.9", features = ["with-chrono-0_4"] }
indicatif = "0.17.11"
console = "0.15.11"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
chrono = "0.4.40"
pretty_assertions = "1.4.1"
thiserror = "2"
ouroboros = "0.18.5"
mockall = "0.13.1"

[dev-dependencies]
criterion = "0.5.1"
fake = { version = "3.1.0", features = ["derive", "chrono"]}
rand = "0.9.0"
rstest = "0.25.0"
tempfile = "3.15.0"

[[bench]]
name = "e2e"
harness = false

[lints.clippy]
needless_return = "allow"
