[package]
name = "db-mover"
description = "Tool to move data between databases"
version = "0.1.0"
edition = "2024"

[lib]
bench = false

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
rusqlite = { version = "0.32.1", features = ["column_decltype", "bundled", "chrono", "serde_json", "uuid"] }
postgres = { version = "0.19.9", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
chrono = "0.4.40"
thiserror = "2"
ouroboros = "0.18.5"
num-format = "0.4.4"
serde = "1.0.219"
serde_json = "1.0.140"
uuid = "1.17.0"

[dev-dependencies]
criterion = "0.5.1"
fake = { version = "3.1.0", features = ["derive", "chrono"]}
rand = "0.9.0"
rstest = "0.25.0"
tempfile = "3.15.0"
mockall = "0.13.1"
pretty_assertions = "1.4.1"
testcontainers = { version = "0.23.3", features = ["blocking"] }
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }

[[bench]]
name = "e2e"
harness = false

[lints.clippy]
needless_return = "allow"
