[package]
name = "db-mover"
description = "Tool to move data between databases"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/Mrreadiness/db-mover"
readme = "README.md"
keywords = ["database", "migration", "copy", "sync", "transfer"]
categories = ["command-line-utilities", "development-tools", "database"]

[lib]
bench = false

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
rusqlite = { version = "0.36.0", features = ["column_decltype", "bundled", "chrono", "serde_json", "uuid"] }
postgres = { version = "0.19.10", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
chrono = "0.4.41"
thiserror = "2"
ouroboros = "0.18.5"
num-format = "0.4.4"
serde = "1.0.219"
serde_json = "1.0.140"
uuid = "1.17.0"
mysql = { version = "26.0.0", features = ["chrono"] }

[dev-dependencies]
criterion = "0.6.0"
fake = { version = "4.3.0", features = ["derive", "chrono"]}
rand = "0.9.1"
rstest = "0.25.0"
tempfile = "3.20.0"
mockall = "0.13.1"
pretty_assertions = "1.4.1"
testcontainers = { version = "0.24.0", features = ["blocking"] }
testcontainers-modules = { version = "0.12.0", features = ["postgres", "mysql"] }
rstest_reuse = "0.7.0"

[[bench]]
name = "e2e"
harness = false

[lints.clippy]
needless_return = "allow"
